# AI-Agriculture

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
ai_engine/: .env.example  README.md  (+3 more)
cloud/: .env.example  Cargo.toml  README.md  deploy.sh
cloud/config/: sensors.toml  sensors.toml.bak_codex_20260419
cloud/dashboard/: app.js  index.html  login.html  login.js  runtime-config.js  styles.css
cloud/frontend_v2_premium/: app.js  chat.js  i18n.js  index.html  styles.css  ui.js
cloud/scripts/: AI-ag  chat_stress_cli.py  image_stress_cli.py  install_ai_ag_cli.sh  install_openclaw_chat_adapter.sh  local_config_smoke_test.sh  openclaw_chat_adapter.py  openclaw_chat_adapter.py.v30  video_frame_poc.py
cloud/sql/migrations/: 0001_create_new_backend_tables.sql  0002_migrate_legacy_tables.sql  0003_timescale_rewrite.sql  0004_uav_coordinate_foundation.sql  0005_observation_sessions.sql
cloud/src/: ai_client.rs  assessment.rs  auth.rs  cli.rs  config.rs  constants.rs  db.rs  http_server.rs  image_upload.rs  main.rs  model.rs  openclaw_tools.rs  payload.rs  presence.rs  registry.rs  server.rs  session.rs  telemetry.rs  time_util.rs  token.rs  tree.rs  uav.rs
cloud/state/: registry.json  token_store.json
cloud/tests/: smoke_e2e.rs
gateway/: .env.example  Cargo.toml  README.md
gateway/config/: gateway.example.toml  gateway.toml.example
gateway/firmware/esp32/: main.py  rust_sensor_node.rs
gateway/firmware/esp32/aiag_probe/: aiag_probe.ino
gateway/firmware/esp32/blank_main/: blank_main.ino
gateway/firmware/esp32/new_device_mock/: new_device_mock.ino
gateway/firmware/esp32/rust_sensor_node/: Cargo.toml
gateway/firmware/esp32/rust_sensor_node/.cargo/: config.toml
gateway/firmware/esp32/rust_sensor_node/src/: main.rs
gateway/scripts/: build_rust_sensor_node.sh  flash_esp32_rust.sh  run_mq7_gateway.sh  serial_tcp_bridge.py
gateway/src/: config.rs  constants.rs  datasource.rs  gateway.rs  main.rs  persist.rs  protocol.rs  serial.rs
gateway/state/: gateway_profile.json
gateway/state_zero_test/: feature_map.json  gateway_profile.json
gateway/tests/: smoke.rs
(+167 files in other folders)
