[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2+spec-1.1.0"
rand = "0.10.1"
tiny_http = "0.12"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }